objects/Jefferies_dev__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Jefferies devs</relationshipLabel>
        <relationshipName>Jefferies_devs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>Address</referenceTo>
        <relationshipLabel>Jefferies devs</relationshipLabel>
        <relationshipName>Jefferies_devs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Jefferies devs</relationshipLabel>
        <relationshipName>Jefferies_devs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorization_Form__c</fullName>
        <label>Authorization Form</label>
        <referenceTo>AuthorizationForm</referenceTo>
        <relationshipLabel>Jefferies devs</relationshipLabel>
        <relationshipName>Jefferies_devs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Jefferies dev</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Jefferies dev Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jefferies devs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>